[gd_scene load_steps=6 format=3 uid="uid://b1wbtgu0xgjx5"]

[ext_resource type="Script" path="res://Scripts/Nexus/Buttons/level_button.gd" id="1_5eg2m"]
[ext_resource type="Texture2D" uid="uid://cytmdwnsx1g3" path="res://Assets/Art/SpecialPatterns/LevelButtonPattern.png" id="2_rgvvm"]
[ext_resource type="Script" path="res://Scripts/Common/spring-button.gd" id="2_ubrkm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmmwt"]
bg_color = Color(0.78011, 0.813155, 0.972788, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.150695, 0.191825, 0.614148, 1)
border_blend = true
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptw8n"]
size = Vector2(280, 320)

[node name="LevelButton" type="Node2D"]
script = ExtResource("1_5eg2m")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -160.0
offset_right = 140.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qmmwt")

[node name="Pattern" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.6)
texture = ExtResource("2_rgvvm")

[node name="LevelPressed" type="TouchScreenButton" parent="."]
shape = SubResource("RectangleShape2D_ptw8n")
script = ExtResource("2_ubrkm")

[node name="CharacterFace" type="Sprite2D" parent="."]

[connection signal="triggered" from="LevelPressed" to="." method="_on_level_pressed_triggered"]
